--- a/AA15/Jenkinsfile
+++ b/AA15/Jenkinsfile
@@ -8,7 +8,7 @@ println alba301100 con ID 1 Login en 2022-09-12 ;
 println A Corunia A Corunia;
 println Alacant Alacant;
 println Albacete Albacete;
-println Almería Almería;
+println Almeria Almeria;
 println Araba Araba;
 println Asturias Asturias;
 println Badajoz Badajoz;
@@ -30,7 +30,7 @@ println Guadalajara Guadalajara;
 println Huelva Huelva;
 println Huesca Huesca;
 println Illes Balears Illes Balears;
-println Jaén Jaén;
+println Jaen Jaen;
 println La Rioja La Rioja;
 println Las Palmas Las Palmas;
 println León León;
@@ -53,7 +53,7 @@ println Tarragona Tarragona;
 println Teruel Teruel;
 println Toledo Toledo;
 println Valladolid Valladolid;
-println València València;
+println Valencia Valencia;
 println Zamora Zamora;
 println Zaragoza Zaragoza;
 println Ávila Ávila;
