--- a/AA15/Jenkinsfile
+++ b/AA15/Jenkinsfile
@@ -33,13 +33,13 @@ println Illes Balears Illes Balears;
 println Jaen Jaen;
 println La Rioja La Rioja;
 println Las Palmas Las Palmas;
-println León León;
+println Leon Leon;
 println Lleida Lleida;
 println Lugo Lugo;
 println Madrid Madrid;
 println Melilla Melilla;
 println Murcia Murcia;
-println Málaga Málaga;
+println Malaga Malaga;
 println Navarra Navarra;
 println Ourense Ourense;
 println Palencia Palencia;
@@ -56,7 +56,7 @@ println Valladolid Valladolid;
 println Valencia Valencia;
 println Zamora Zamora;
 println Zaragoza Zaragoza;
-println Ávila Ávila;
+println Avila Avila;
 }
 }
 }
